--- a/index.html
+++ b/index.html
@@ -56,9 +56,7 @@
                             o projeto</button>
                     </div>
                 </div>
-            </div>EEste projeto Scratch cria uma experiência interativa educativa sobre
-            astronomia, permitindo aos usuários explorar informações sobre constelações, eclipses, e a
-            forma da Terra através de cenários dinâmicos e diálogos informativos.
+            </div>
 
             <!-- Projeto 3 -->
             <div class="col-md-4">
@@ -85,7 +83,6 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Minha Biblioteca: Uma Webpage Personalizada</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -155,21 +152,20 @@
     <div class="modal" id="modal2" tabindex="-1">
         <div class="modal-dialog">
             <div class="modal-content">
-                <div class="modal-header">EEste projeto Scratch cria uma experiência interativa educativa sobre
-                    astronomia, permitindo aos usuários explorar informações sobre constelações, eclipses, e a
-                    forma da Terra através de cenários dinâmicos e diálogos informativos.
-                    <h5 class="modal-title">Minha Biblioteca: Uma Webpage Personalizada</h5>
+                <div class="modal-header">
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <p>Conceitos Básicos de Culinária e Gastronomia
-                        Culinária : Refere-se ao ato de preparar, cozinhar e apresentar alimentos. Envolva habilidades práticas, como cortar, temperar, cozinhar e decorar pratos.
-                        Gastronomia : É um campo mais amplo que inclui a avaliação cultural e científica dos alimentos, técnicas de cozinha, apresentação, e até mesmo o estudo dos impactos sociais e históricos da alimentação.</p>
-                    <p>Tipos de Culinária
-                        Culinária Internacional : Explora as cozinhas do mundo, como italiana, francesa, chinesa, japonesa, indiana, mexicana, entre outras. Cada uma tem suas técnicas, ingredientes típicos e formas de apresentação.
-                        Culinária Regional Brasileira : Envolve pratos típicos de diferentes regiões do Brasil, como a feijoada carioca, o acarajé baiano, a moqueca capixaba, e a culinária amazônica com o uso de ingredientes locais como tucupi e jambu.
-                        Culinária Funcional : Foca em alimentos que oferecem benefícios adicionais à saúde, como superalimentos, alimentos orgânicos, e receitas sem glúten ou lactose.
-                        Culinária Vegana/Vegetariana : Envolve receitas que excluem produtos de origem animal, focando em vegetais, leguminosas, grãos, e alternativas vegetais.</p>
+                    <p>Conceitos Básicos de Jardinagem
+                        Jardinagem : É o cultivo de plantas em espaços como jardins, quintais, varandas, ou até mesmo em ambientes internos. Envolve desde a preparação do solo até à manutenção das plantas.
+                        Paisagismo : É o planejamento e a execução de espaços verdes, utilizando plantas, pedras, água e outros elementos decorativos para criar ambientes esteticamente instalados.
+                        Horticultura : Focada no cultivo de vegetais, frutas e ervas. É uma subcategoria de jardinagem que pode ser praticada tanto em hortas caseiras quanto em hortas comunitárias.</p>
+                    <p>Tipos de Jardinagem
+                        Jardinagem de Exterior : Inclui jardins de quintal, canteiros de flores, hortas, e paisagismo. Foca no uso de plantas que se adaptem ao clima local.
+                        Jardinagem de Interior : Envolve o cultivo de plantas dentro de casa ou em espaços fechados, como escritórios, usando plantas adaptadas à pouca luz e condições de ambientes internos.
+                        Horta Vertical : Técnica de cultivo em paredes ou estruturas verticais, ideal para quem tem pouco espaço.
+                        Jardinagem Sustentável : Uso de práticas que minimizam o impacto ambiental, como compostagem, reutilização de água, e plantio de espécies nativas.
+                        Xeriscape : Jardinagem que utiliza plantas que apresentam pouca água, ideal para áreas áridas ou regiões com restrições de água.</p>
                     <p>Técnicas de Cozinha
                         Corte de Alimentos : Técnicas como juliana, brunoise, chiffonade e corte em cubos, essenciais para a preparação correta e uniforme dos alimentos.
                         Métodos de Cocção :
