--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <!-- Projeto 1 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
+                    <img src="8f92fb5c79fba4fa5eac7d4a7b5de3a8.jpg" class="card-img-top" alt="imagem">
                     <div class="card-body">
                         <h5 class="card-title">Culinária e Gastronomia</h5>
                         <p class="card-text">A culinária e a gastronomia são artes que combinam tradição, criatividade e técnica, oferecendo infinitas possibilidades para quem deseja aprender, ensinar ou simplesmente explorar novos sabores.
@@ -45,7 +45,7 @@
             <!-- Projeto 2 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="img/projeto-2.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
+                    <img src="81a0f9766326eaf597ab6c0c4d2143d2.jpg" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
                         <h5 class="card-title">Jardinagem e Plantas</h5>
                         <p class="card-text">A jardinagem é uma prática relaxante e gratificante que conecta as pessoas à natureza e enriquece os ambientes com vida e beleza.
@@ -60,8 +60,8 @@
 
             <!-- Projeto 3 -->
             <div class="col-md-4">
-                <div class="card">
-                    <img src="img/projeto-3.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
+                <div class="card">Imagem do projeto de biblioteca virtual
+                    <img src="46fa0cff99bd59eb95ec0aac69dd2f78.jpg" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
                         <h5 class="card-title">Jogos de Tabuleiro</h5>
                         <p class="card-text">Os jogos de tabuleiro são um hobby rico e variado que pode se adaptar a todos os tipos de jogadores, desde iniciantes até entusiastas hardcore.
@@ -138,7 +138,7 @@
                     Exploração de Sabores : Não tenha medo de experimentar novos temperos e ingredientes.
                     Organização : Mantenha sua cozinha limpa e seus ingredientes preparados antes de começar a cozinhar.
                         </p>
-                    <img src="img/projeto-1.png" class="img-fluid w-100"
+                    <img src="8f92fb5c79fba4fa5eac7d4a7b5de3a8.jpg" class="img-fluid w-100"
                         alt="Imagem representativa do projeto de uma biblioteca online">
                 </div>
                 <div class="modal-footer">
@@ -209,7 +209,7 @@
                     Observe as Plantas Regularmente : Verifique sinais de pragas, doenças ou necessidades de água e luz.
                     Seja Paciente : Jardinagem requer tempo e paciência; algumas plantas podem demorar para florescer ou dar frutos.
                         </p>
-                    <img src="img/projeto-2.png" class="img-fluid w-100"
+                    <img src="81a0f9766326eaf597ab6c0c4d2143d2.jpg" class="img-fluid w-100"
                         alt="Imagem representativa do projeto de uma biblioteca online">
                 </div>
                 <div class="modal-footer">
@@ -290,7 +290,7 @@
                     Comece com Jogos Simples : Para novos jogadores, comece com jogos mais simples e aumente gradualmente a complexidade.
                     Pacote de Regras Resumido : Mantenha à mão um resumo das regras principais para consultas rápidas durante o jogo.
                         </p>
-                    <img src="img/projeto-3.png" alt="Projeto 3" class="img-fluid w-100">
+                    <img src="46fa0cff99bd59eb95ec0aac69dd2f78.jpg" alt="Projeto 3" class="img-fluid w-100">
                 </div>
                 <div class="modal-footer">
                     <a href="https://scratch.mit.edu/projects/951732825/">Ver projeto ao vivo</a>
