--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
             <!-- Projeto 3 -->
             <div class="col-md-4">
-                <div class="card">Imagem do projeto de biblioteca virtual
+                <div class="card">
                     <img src="46fa0cff99bd59eb95ec0aac69dd2f78.jpg" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
                         <h5 class="card-title">Jogos de Tabuleiro</h5>
@@ -101,7 +101,8 @@
                         Assar (no forno, grelhar)
                         Cozimento (em água, sem vapor, sous-vide)
                         Brasear e Estufar : Combina calor seco e úmido, ideal para carnes mais duras.
-                        Técnicas de Temperagem e Marinagem : Como equilibrar temperos e criar marinadas para intensificar sabores.
+                        <div class="card">Imagem do projeto de biblioteca virtual
+                            Técnicas de Temperagem e Marinagem : Como equilibrar temperos e criar marinadas para intensificar sabores.
                         Mise en Place : Organização e preparação dos ingredientes antes de iniciar o preparo, essencial para a eficiência na cozinha.
                         </p>
                     <p> Equipamentos e Utensílios Essenciais
@@ -287,7 +288,7 @@
                      Dicas para Ensinar e Aprender Novos Jogos
                     Leia o Manual com Atenção : Leia as regras com calma antes de ensinar. Vídeos tutoriais online também podem ser úteis.
                     Demonstração Prática : Faça uma rodada de demonstração para que todos compreendam a mecânica.
-                    Comece com Jogos Simples : Para novos jogadores, comece com jogos mais simples e aumente gradualmente a complexidade.
+                    Comece com Jogos Simples : Para novos joimg/projeto-1.pnggadores, comece com jogos mais simples e aumente gradualmente a complexidade.
                     Pacote de Regras Resumido : Mantenha à mão um resumo das regras principais para consultas rápidas durante o jogo.
                         </p>
                     <img src="46fa0cff99bd59eb95ec0aac69dd2f78.jpg" alt="Projeto 3" class="img-fluid w-100">
