--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header class="container text-center">
-        <img src="img/avatar-perfil.png" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150"
+        <img src="qbit (2).png" alt="avatar da Yuri" class="rounded-circle" width="150" height="150"
             srcset="">
         <p class="lead">Eu sou Breno Yuri_</p>
         <h1>Eu Hobbies e Lazer</h1>
